src/objects/AndrewXO__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modality__c</fullName>
        <label>Modality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Long__c</fullName>
        <label>Provider (Long)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Short__c</fullName>
        <label>Provider (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AndrewXO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AndrewXO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AndrewXO&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>